Fix font size for body to look much more readable

--- a/about-style.scss
+++ b/about-style.scss
@@ -18,7 +18,7 @@ $textColor: #4f4f4f;
 
 body {
   font-family: lato, sans-serif;
-  font-size: 62.3%;
+  font-size: 62.5%;
 }
 
 .hr {
